# ocr_translator

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
libs/: CaptureScreen.py  LLM.py  OCR.py  llm_models_info.py
tests/: test_ocr.py  test_output.py
tests/OCR_test/: test_ocr.py
tests/ScreenCapture_test/: test_screen_capture.py
util/: image_test_recognition.py  ocr_translation.py
